--- a/private.properties
+++ b/private.properties
@@ -3,6 +3,7 @@ clientLogLevel=INFO
 serverLogLevel=INFO
 debugClientPort=8900
 debugServerPort=8901
-j2eeServerId=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.30:base=Apache Tomcat 8.0.30_base
 defaultDataSource=jdbc:h2:tcp://localhost/~/db [123 \u043d\u0430 INFORMATION_SCHEMA]
 browserCacheBusting=false
+j2eeServerId=tomcat80:home=D:\\Program Files (x86)\\Apache Software Foundation\\Apache Tomcat 8.0.30:base=Apache Tomcat 8.0.30_base
+runUser=
